<resources>
    <string name="app_name">PulseDonor</string>
    <string name="sign_up">Regjistrohu</string>
    <string name="sign_in">Kyçuni</string>
    <string name="continue_as_guest">Vazhdo pa llogari</string>
    <string name="firstname">Emri</string>
    <string name="lastname">Mbiemri</string>
    <string name="save">Ruaj</string>
    <string name="blood_group">Grupi i gjakut</string>
    <string name="city">Qyteti</string>
    <string name="phone_number">Telefoni</string>
    <string name="email">Email</string>
    <string name="password">Fjalëkalimi</string>
    <string name="forgot_password">Keni harruar fjalekalimin?</string>
    <string name="fp_desc_1">Shkruani emailin tuaj, ne do t\'ju dërgojmë një kod verifikimi.</string>
    <string name="register_now">Nuk keni ende llogari? Regjistrohuni tani.</string>
    <string name="login_now">Keni llogari? Kyçuni tani.</string>
    <string name="back">Kthehu</string>
    <string name="app_moto">Dhuro gjak, shpëto jetë. \n Fuqia për të shpëtuar jetë është në duart tuaja – bëhuni ndryshimi.</string>
    <string name="signin_description">Kyçuni për të shpëtuar jetë. Qasuni profileve tuaja dhe ndihmoni komunitetin tuaj të sigurojë gjak kur ka nevojë.</string>
    <string name="signup_description">Krijoni një llogari për t\'u bërë pjesë e një rrjeti jetik që mbështet dhurimin dhe shpërndarjen e gjakut në mënyrë të sigurt dhe të përgjegjshme.</string>
    <string name="please_enter_digits_code_send_to_you_at">Ju lutemi shkruani kodin 6-shifror që është dërguar në email-in e mëposhtëm:</string>
    <string name="continuee">Vazhdo</string>
    <string name="did_not_receive_a_code">Nuk keni marrë një kod?</string>
    <string name="send_back">Ridërgojeni</string>
    <string name="create_new_pass">Krijo një fjalëkalim të ri</string>
    <string name="confirm_password">Konfirmo fjalëkalimin</string>
    <string name="update_pass">Përditëso fjalëkalimin</string>
    <string name="email_verification">Verifikimi me email</string>
    <string name="send_code">Dërgo kodin</string>
    <string name="home">Kryefaqja</string>
    <string name="profile">Profili</string>
    <string name="map">Harta</string>
    <string name="hall_of_fame">Hall of fame</string>
    <string name="overview">Përmbledhje</string>
    <string name="my_posts">Postimet e mija</string>
    <string name="donations_list">Lista e dhurimeve</string>
    <string name="aplications">Aplikimet</string>
    <string name="security">Siguria</string>
    <string name="logout">Dil nga llogaria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_maps">Wander</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="zoom">15f</string>
    <string name="google_maps_api_key">AIzaSyDVEKJNCcNHcijwaFM0pXveilEkqOnqTpA</string>


</resources>