<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMainHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvBack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="45dp"
                    android:drawablePadding="6dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/back"
                    android:drawableStart="@drawable/back_icon"
                    android:drawableTint="@color/primary"
                    android:textColor="@color/primary50"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvBack">

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textColor="@color/primary"
                        android:textSize="38sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/signin_description"
                        android:textColor="@color/cl_a2a2a2"
                        android:textSize="12sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilEmail"
                        style="@style/CustomTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:hint="@string/email"
                        android:textColorHint="@color/cl_c8c5c3"
                        app:hintTextAppearance="@style/TextInputLayoutHintText"
                        app:hintTextColor="@color/cl_c8c5c3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            style="@style/CustomTextEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_general_stroke_input_fields"
                            android:drawableStart="@drawable/email_icon"
                            android:drawablePadding="7dp"
                            android:fontFamily="@font/sf_pro_display_medium"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        style="@style/CustomTextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/password"
                        android:textColorHint="@color/cl_c8c5c3"
                        app:hintTextAppearance="@style/TextInputLayoutHintText"
                        app:hintTextColor="@color/cl_c8c5c3"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="#dddddd">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            style="@style/CustomTextEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_general_stroke_input_fields"
                            android:drawableStart="@drawable/lock_icon"
                            android:drawablePadding="7dp"
                            android:fontFamily="@font/sf_pro_display_medium"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins"
                        android:gravity="end"
                        android:text="@string/forgot_password"
                        android:textColor="@color/cl_a2a2a2"
                        android:textSize="12sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                   android:layout_marginHorizontal="28dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_solid_cl_primary_radius_12dp"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvForgotPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/register_now"
                    android:textColor="@color/primary50"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
                    app:layout_constraintStart_toStartOf="@+id/btn_sign_in" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>